--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "المستخدمين المقترنين",
     "CL_CF_CS_atw_cs_2": "اضغط على زر القائمة للدخول إلى قائمة القائمة.",
     "CL_CF_CS_atw_cs_3": "حدد WIFI، ثم اضغط على الزر الأوسط لبدء تكوين WIFI. سيبدأ رمز WLAN الآن في الوميض.",
-    "CL_CF_CM_sun_rain_atw_name": "مضخة الحرارة ATW"
+    "CL_CF_CM_sun_rain_atw_name": "مضخة الحرارة ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "أضف وقتًا إضافيًا للحفاظ على طعامك دافئًا.",
+    "CL_DV_OV_continue_fast_cool_desc": "قم بتبريد الفرن بأسرع ما يمكن.",
+    "CL_DV_OV_continue_reduces_desc": "يقلل من الرطوبة المتبقية بعد الطهي.",
+    "CL_DV_OV_go_to_extra": "انتقل إلى الإضافات",
+    "CL_SL_CM_visualization": "التصور",
+    "CL_SL_CM_laundry_usage_report": "تقرير استخدام الغسيل",
+    "CL_SL_CM_usage_month": "استخدام الشهر",
+    "CL_SL_CM_about_usage_month": "حول استخدام الشهر",
+    "CL_SL_CM_about_usage_month_detail": "البيانات المعروضة هي تقديرات وليست قياسات دقيقة. تعتمد تقديراتنا على اختبارات خاضعة للرقابة، لذا قد تختلف نتائجك الفعلية. يعتمد استخدام الطاقة في العالم الحقيقي على بيئتك وعاداتك المحددة.",
+    "CL_SL_CM_drum_cleaning_title": "تنظيف الطبلة",
+    "CL_SL_CM_drum_cleaning_great_job": "إن أسطوانة الغسالة نظيفة وقد قمت بعمل رائع!",
+    "CL_SL_CM_drum_cleaning_warning": "لقد تم غسله عدة مرات منذ آخر عملية تنظيف للأسطوانة، ويوصى باستخدامه لجعل الغسيل أكثر نظافة.",
+    "CL_SL_CM_drum_cleaning_about": "حول تنظيف الطبلة",
+    "CL_SL_CM_drum_cleaning_about_detail": "تعتبر وظيفة تنظيف حلة الغسالة عبارة عن دورة تنظيف ذاتية مصممة لإزالة العفن أو البكتيريا الأخرى التي من المحتمل أن تتراكم داخل الحلة بسبب الاستخدام العام. نوصي بإجراء تنظيف الحلة بعد 30 دورة غسيل.",
+    "CL_SL_CM_data_statistics": "إحصائيات البيانات",
+    "CL_SL_CM_data_statistics_about": "حول إحصائيات البيانات",
+    "CL_SL_CM_data_statistics_about_detail": "\"الآخرون\" هو مجموع الأشياء الأقل استخدامًا.",
+    "CL_SL_CM_usage_week_about": "حول استخدام الاسبوع",
+    "CL_SL_CM_usage_month_about": "حول استخدام الشهر",
+    "CL_SL_CM_usage_year_about": "حول استخدام العام",
+    "CL_SL_CM_washing_temperature": "درجة حرارة الغسيل",
+    "CL_SL_CM_washing_temperature_detail": "إحصائيًا، تعتبر درجات الحرارة المنخفضة أكثر كفاءة في استخدام الطاقة، لذا قد ترغب في تجربة درجة حرارة أقل للمياه في المرة القادمة.",
+    "add_appliance_connect_wifi_atos": "اتصل بشبكة \"ConnectLife\" في إعدادات Wi-Fi بهاتفك الذكي. \n \n اخرج من تطبيق ConnectLife وانتقل إلى إعدادات Wi-Fi بهاتفك الذكي. اتصل بشبكة \"ConnectLife\" ، واكتب كلمة المرور \"ConnectLife\" ثم عد إلى التطبيق.",
+    "after_sale_report_failed_desc_new": "حدث خطأ غير متوقع ولم يتم الإبلاغ عن المشكلة.",
+    "CL_DV_RF_sf_remaining": "حاليًا في حالة تجميد شديد مع ** دقيقة متبقية."
 }
