--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "gepaarte Benutzer",
     "CL_CF_CS_atw_cs_2": "Drücken Sie die Menütaste, um die Menüliste aufzurufen.",
     "CL_CF_CS_atw_cs_3": "Wähle WLAN aus und drücke dann die mittlere Taste, um die WLAN-Konfiguration zu starten. Das WLAN-Symbol beginnt nun zu blinken.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW Wärmepumpe"
+    "CL_CF_CM_sun_rain_atw_name": "ATW Wärmepumpe",
+    "CL_DV_OV_continue_keep_warm_desc": "Planen Sie zusätzliche Zeit ein, um Ihr Essen warm zu halten.",
+    "CL_DV_OV_continue_fast_cool_desc": "Den Backofen so schnell wie möglich abkühlen lassen.",
+    "CL_DV_OV_continue_reduces_desc": "Reduziert die verbleibende Feuchtigkeit nach dem Kochen.",
+    "CL_DV_OV_go_to_extra": "Zu den Extras",
+    "CL_SL_CM_visualization": "Visualisierung",
+    "CL_SL_CM_laundry_usage_report": "Wäschenutzungsbericht",
+    "CL_SL_CM_usage_month": "Nutzung des Monats",
+    "CL_SL_CM_about_usage_month": "Über die Nutzung des Monats",
+    "CL_SL_CM_about_usage_month_detail": "Bei den angezeigten Daten handelt es sich um Schätzungen und nicht um genaue Messungen. Unsere Schätzungen basieren auf kontrollierten Tests, Ihre tatsächlichen Ergebnisse können also abweichen. Der tatsächliche Energieverbrauch hängt von Ihrer spezifischen Umgebung und Ihren Gewohnheiten ab.",
+    "CL_SL_CM_drum_cleaning_title": "Trommelreinigung",
+    "CL_SL_CM_drum_cleaning_great_job": "Die Waschtrommel ist sauber und Sie haben tolle Arbeit geleistet!",
+    "CL_SL_CM_drum_cleaning_warning": "Da die Trommel seit der letzten Reinigung häufig gewaschen wurde, empfiehlt es sich, sie zum Wäschereinigen zu verwenden.",
+    "CL_SL_CM_drum_cleaning_about": "Über die Trommelreinigung",
+    "CL_SL_CM_drum_cleaning_about_detail": "Die Trommelreinigungsfunktion einer Waschmaschine ist ein Selbstreinigungszyklus, der Schimmel oder andere Bakterien entfernt, die sich durch den allgemeinen Gebrauch im Inneren der Trommel angesammelt haben könnten. Wir empfehlen, nach 30 Waschzyklen eine Trommelreinigung durchzuführen.",
+    "CL_SL_CM_data_statistics": "Datenstatistik",
+    "CL_SL_CM_data_statistics_about": "Informationen zu Datenstatistiken",
+    "CL_SL_CM_data_statistics_about_detail": "„Andere“ ist die Summe der weniger genutzten.",
+    "CL_SL_CM_usage_week_about": "Über die Nutzung der Woche",
+    "CL_SL_CM_usage_month_about": "Über die Nutzung des Monats",
+    "CL_SL_CM_usage_year_about": "Über die Nutzung des Jahres",
+    "CL_SL_CM_washing_temperature": "Waschtemperatur",
+    "CL_SL_CM_washing_temperature_detail": "Niedrigere Temperaturen sind statistisch gesehen energieeffizienter. Versuchen Sie es beim nächsten Mal vielleicht mit einer niedrigeren Wassertemperatur.",
+    "add_appliance_connect_wifi_atos": "Verbinden Sie sich in den Wi-Fi-Einstellungen Ihres Smartphones mit dem „ConnectLife“-Netzwerk.\n\nBeenden Sie die ConnectLife-App und gehen Sie zu den Wi-Fi-Einstellungen Ihres Smartphones. Verbinden Sie sich mit dem „ConnectLife“-Netzwerk, geben Sie das Passwort „ConnectLife“ ein und kehren Sie zur App zurück.",
+    "after_sale_report_failed_desc_new": "Ein unerwarteter Fehler ist aufgetreten und das Problem konnte nicht gemeldet werden.",
+    "CL_DV_RF_sf_remaining": "Derzeit im Super-Freeze mit ** verbleibenden Minuten."
 }
