--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "paired users",
     "CL_CF_CS_atw_cs_2": "Press the Menu button to enter the menu list.",
     "CL_CF_CS_atw_cs_3": "Select WIFI, then press the middle button to start WIFI configuration. The WLAN symbol will now start to flash.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW Heat Pump"
+    "CL_CF_CM_sun_rain_atw_name": "ATW Heat Pump",
+    "CL_DV_OV_continue_keep_warm_desc": "Add additional time to keep your food warm.",
+    "CL_DV_OV_continue_fast_cool_desc": "Cool down the oven as fast as possible.",
+    "CL_DV_OV_continue_reduces_desc": "Reduces remaining moisture after cooking.",
+    "CL_DV_OV_go_to_extra": "Go to extra’s",
+    "CL_SL_CM_visualization": "Visualization",
+    "CL_SL_CM_laundry_usage_report": "Laundry usage report",
+    "CL_SL_CM_usage_month": "Usage of the month",
+    "CL_SL_CM_about_usage_month": "About usage of the month",
+    "CL_SL_CM_about_usage_month_detail": "The data shown are estimates, not exact measurements.Our estimates are based on controlled tests, so your actual results may vary.Real-world energy use depends on your specific environment and habits.",
+    "CL_SL_CM_drum_cleaning_title": "Drum cleaning",
+    "CL_SL_CM_drum_cleaning_great_job": "The washer drum is clean and you did a great job!",
+    "CL_SL_CM_drum_cleaning_warning": "It has been washed many times since the last drum cleaning, and it is recommended to use it to make the laundry cleaner.",
+    "CL_SL_CM_drum_cleaning_about": "About drum cleaning",
+    "CL_SL_CM_drum_cleaning_about_detail": "A washing machine drum clean function is a self-cleaning cycle designed to remove mold or other bacteria that is likely to have built up inside the drum through general use.We recommend that you do a drum cleaning after 30 laundry cycles.",
+    "CL_SL_CM_data_statistics": "Data statistics",
+    "CL_SL_CM_data_statistics_about": "About data statistics",
+    "CL_SL_CM_data_statistics_about_detail": "“Others” is the sum of lesser-used ones.",
+    "CL_SL_CM_usage_week_about": "About usage of the week",
+    "CL_SL_CM_usage_month_about": "About usage of the month",
+    "CL_SL_CM_usage_year_about": "About usage of the year",
+    "CL_SL_CM_washing_temperature": "Washing temperature",
+    "CL_SL_CM_washing_temperature_detail": "Lower temperatures are statistically more energy efficient, so you may want to try a lower water temperature next time.",
+    "add_appliance_connect_wifi_atos": "Connect to “ConnectLife” network in the Wi-Fi settings of your smartphone.\n\nExit ConnectLife app, go to your smartphone’s WiFi settings. Connect to “ConnectLife” network type in password “ConnectLife” and return back to ConnectLife app.",
+    "after_sale_report_failed_desc_new": "An unexpected error occured and the issue could not be reported.",
+    "CL_DV_RF_sf_remaining": "Currently in super freeze with ** min remaining."
 }
