--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "کاربران جفت شده",
     "CL_CF_CS_atw_cs_2": "دکمه Menu را فشار دهید تا وارد لیست منو شوید.",
     "CL_CF_CS_atw_cs_3": "WIFI را انتخاب کنید، سپس دکمه وسط را فشار دهید تا پیکربندی WIFI شروع شود. نماد WLAN اکنون شروع به چشمک زدن می کند.",
-    "CL_CF_CM_sun_rain_atw_name": "پمپ حرارتی ATW"
+    "CL_CF_CM_sun_rain_atw_name": "پمپ حرارتی ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "برای گرم نگه داشتن غذا زمان بیشتری اضافه کنید.",
+    "CL_DV_OV_continue_fast_cool_desc": "فر را تا حد امکان سرد کنید.",
+    "CL_DV_OV_continue_reduces_desc": "رطوبت باقی مانده پس از پخت را کاهش می دهد.",
+    "CL_DV_OV_go_to_extra": "برو سراغ موارد اضافی",
+    "CL_SL_CM_visualization": "تجسم",
+    "CL_SL_CM_laundry_usage_report": "گزارش استفاده از لباسشویی",
+    "CL_SL_CM_usage_month": "کاربرد ماه",
+    "CL_SL_CM_about_usage_month": "در مورد استفاده از ماه",
+    "CL_SL_CM_about_usage_month_detail": "داده‌های نشان‌داده‌شده تخمین‌ها هستند، نه اندازه‌گیری‌های دقیق. برآوردهای ما براساس آزمایش‌های کنترل‌شده است، بنابراین نتایج واقعی شما ممکن است متفاوت باشد. مصرف انرژی در دنیای واقعی به محیط و عادات خاص شما بستگی دارد.",
+    "CL_SL_CM_drum_cleaning_title": "تمیز کردن درام",
+    "CL_SL_CM_drum_cleaning_great_job": "درام واشر تمیز است و شما کار بسیار خوبی انجام دادید!",
+    "CL_SL_CM_drum_cleaning_warning": "از آخرین شستشوی درام بارها شسته شده است و توصیه می شود برای ساخت لباسشویی از آن استفاده کنید.",
+    "CL_SL_CM_drum_cleaning_about": "درباره تمیز کردن درام",
+    "CL_SL_CM_drum_cleaning_about_detail": "عملکرد تمیز کردن درام ماشین لباسشویی یک چرخه خود تمیز شوندگی است که برای از بین بردن کپک یا سایر باکتری هایی که احتمالاً در داخل درام از طریق استفاده عمومی ایجاد شده اند، طراحی شده است.",
+    "CL_SL_CM_data_statistics": "آمار داده ها",
+    "CL_SL_CM_data_statistics_about": "درباره آمار داده ها",
+    "CL_SL_CM_data_statistics_about_detail": "\"دیگران\" مجموع موارد کمتر استفاده شده است.",
+    "CL_SL_CM_usage_week_about": "در مورد استفاده از هفته",
+    "CL_SL_CM_usage_month_about": "در مورد استفاده از ماه",
+    "CL_SL_CM_usage_year_about": "در مورد استفاده از سال",
+    "CL_SL_CM_washing_temperature": "دمای شستشو",
+    "CL_SL_CM_washing_temperature_detail": "دماهای پایین تر از نظر آماری بازده انرژی بیشتری دارند، بنابراین ممکن است بخواهید دفعه بعد دمای آب کمتری را امتحان کنید.",
+    "add_appliance_connect_wifi_atos": "در تنظیمات Wi-Fi تلفن هوشمند خود به شبکه «ConnectLife» وصل شوید.\n\nاز برنامه ConnectLife خارج شوید و به تنظیمات Wi-Fi تلفن هوشمند خود بروید. به شبکه «ConnectLife» وصل شوید، گذرواژه «ConnectLife» را تایپ کنید و به برنامه برگردید.",
+    "after_sale_report_failed_desc_new": "یک خطای غیرمنتظره روی داد و مشکل گزارش نشد.",
+    "CL_DV_RF_sf_remaining": "در حال حاضر در حالت انجماد فوق العاده با ** دقیقه باقی مانده است."
 }
