--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "párosított felhasználók",
     "CL_CF_CS_atw_cs_2": "Nyomja meg a Menü gombot, hogy belépjen a menülistába.",
     "CL_CF_CS_atw_cs_3": "Válassza ki a WIFI lehetőséget, majd nyomja meg a középső gombot a WIFI konfiguráció elindításához. A WLAN szimbólum villogni kezd.",
-    "CL_CF_CM_sun_rain_atw_name": "ATW hőszivattyú"
+    "CL_CF_CM_sun_rain_atw_name": "ATW hőszivattyú",
+    "CL_DV_OV_continue_keep_warm_desc": "Adjon hozzá további időt az étel melegen tartásához.",
+    "CL_DV_OV_continue_fast_cool_desc": "Hűtsük le a sütőt amilyen gyorsan csak lehet.",
+    "CL_DV_OV_continue_reduces_desc": "Csökkenti a maradék nedvességet a főzés után.",
+    "CL_DV_OV_go_to_extra": "Menj az extrákhoz",
+    "CL_SL_CM_visualization": "Megjelenítés",
+    "CL_SL_CM_laundry_usage_report": "Mosodahasználati jelentés",
+    "CL_SL_CM_usage_month": "A hónap felhasználása",
+    "CL_SL_CM_about_usage_month": "A hónap használatáról",
+    "CL_SL_CM_about_usage_month_detail": "A megjelenített adatok becslések, nem pontos mérések. Becsléseink ellenőrzött teszteken alapulnak, így a tényleges eredmények változhatnak. A valós energiafelhasználás az Ön konkrét környezetétől és szokásaitól függ.",
+    "CL_SL_CM_drum_cleaning_title": "Dobtisztítás",
+    "CL_SL_CM_drum_cleaning_great_job": "A mosódob tiszta és remek munkát végzett!",
+    "CL_SL_CM_drum_cleaning_warning": "A legutóbbi dobtisztítás óta sokszor ki lett mosva, a ruhanemű tisztábbá tételéhez ajánlott használni.",
+    "CL_SL_CM_drum_cleaning_about": "A dobtisztításról",
+    "CL_SL_CM_drum_cleaning_about_detail": "A mosógép dobtisztító funkciója egy öntisztító ciklus, amelynek célja a penész vagy más baktériumok eltávolítása, amelyek az általános használat során valószínűleg felhalmozódtak a dob belsejében. Javasoljuk, hogy 30 mosási ciklus után végezzen dobtisztítást.",
+    "CL_SL_CM_data_statistics": "Adatstatisztika",
+    "CL_SL_CM_data_statistics_about": "Az adatstatisztikáról",
+    "CL_SL_CM_data_statistics_about_detail": "Az „egyéb” a kevésbé használtak összege.",
+    "CL_SL_CM_usage_week_about": "A hét használatáról",
+    "CL_SL_CM_usage_month_about": "A hónap használatáról",
+    "CL_SL_CM_usage_year_about": "Az év használatáról",
+    "CL_SL_CM_washing_temperature": "Mosási hőmérséklet",
+    "CL_SL_CM_washing_temperature_detail": "Az alacsonyabb hőmérséklet statisztikailag energiahatékonyabb, ezért érdemes legközelebb alacsonyabb vízhőmérsékletet kipróbálni.",
+    "add_appliance_connect_wifi_atos": "Csatlakozzon a „ConnectLife” hálózathoz az okostelefon Wi-Fi beállításaiban.\n\nLépjen ki a ConnectLife alkalmazásból, és lépjen az okostelefon Wi-Fi beállításaihoz. Csatlakozzon a „ConnectLife” hálózathoz, írja be a „ConnectLife” jelszót, és térjen vissza az alkalmazáshoz.",
+    "after_sale_report_failed_desc_new": "Váratlan hiba történt, és a problémát nem lehetett jelenteni.",
+    "CL_DV_RF_sf_remaining": "Jelenleg szuperfagyasztásban van, ** perc van hátra."
 }
