--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "utenti accoppiati",
     "CL_CF_CS_atw_cs_2": "Premere il pulsante Menu per accedere all'elenco dei menu.",
     "CL_CF_CS_atw_cs_3": "Selezionare WIFI, quindi premere il pulsante centrale per avviare la configurazione WIFI. Il simbolo WLAN inizierà ora a lampeggiare.",
-    "CL_CF_CM_sun_rain_atw_name": "Pompa di calore ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Pompa di calore ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Aggiungere altro tempo per mantenere il cibo caldo.",
+    "CL_DV_OV_continue_fast_cool_desc": "Lasciare raffreddare il forno il più velocemente possibile.",
+    "CL_DV_OV_continue_reduces_desc": "Riduce l'umidità residua dopo la cottura.",
+    "CL_DV_OV_go_to_extra": "Vai agli extra",
+    "CL_SL_CM_visualization": "Visualizzazione",
+    "CL_SL_CM_laundry_usage_report": "Rapporto sull'utilizzo della lavanderia",
+    "CL_SL_CM_usage_month": "Utilizzo del mese",
+    "CL_SL_CM_about_usage_month": "Informazioni sull'utilizzo del mese",
+    "CL_SL_CM_about_usage_month_detail": "I dati indicati sono stime, non misurazioni esatte. Le nostre stime si basano su test controllati, pertanto i risultati effettivi potrebbero variare. Il consumo energetico reale dipende dall'ambiente e dalle abitudini specifiche.",
+    "CL_SL_CM_drum_cleaning_title": "Pulizia del tamburo",
+    "CL_SL_CM_drum_cleaning_great_job": "Il cestello della lavatrice è pulito e hai fatto un ottimo lavoro!",
+    "CL_SL_CM_drum_cleaning_warning": "È stato lavato molte volte dall'ultima pulizia del cestello e si consiglia di utilizzarlo per rendere il bucato più pulito.",
+    "CL_SL_CM_drum_cleaning_about": "Informazioni sulla pulizia del tamburo",
+    "CL_SL_CM_drum_cleaning_about_detail": "La funzione di pulizia del cestello della lavatrice è un ciclo di autopulizia studiato per rimuovere muffe o altri batteri che potrebbero accumularsi all'interno del cestello a causa dell'uso normale. Si consiglia di effettuare la pulizia del cestello dopo 30 cicli di lavaggio.",
+    "CL_SL_CM_data_statistics": "Statistiche dei dati",
+    "CL_SL_CM_data_statistics_about": "Informazioni sulle statistiche dei dati",
+    "CL_SL_CM_data_statistics_about_detail": "“Altri” è la somma di quelli meno utilizzati.",
+    "CL_SL_CM_usage_week_about": "Informazioni sull'uso della settimana",
+    "CL_SL_CM_usage_month_about": "Informazioni sull'utilizzo del mese",
+    "CL_SL_CM_usage_year_about": "Informazioni sull'utilizzo dell'anno",
+    "CL_SL_CM_washing_temperature": "Temperatura di lavaggio",
+    "CL_SL_CM_washing_temperature_detail": "Statisticamente, temperature più basse sono più efficienti dal punto di vista energetico, quindi la prossima volta potresti provare a usare una temperatura dell'acqua più bassa.",
+    "add_appliance_connect_wifi_atos": "Connettiti alla rete \"ConnectLife\" nelle impostazioni Wi-Fi del tuo smartphone.\n\nEsci dall'app ConnectLife e vai alle impostazioni Wi-Fi del tuo smartphone. Connettiti alla rete “ConnectLife”, digita la password “ConnectLife” e torna all'app.",
+    "after_sale_report_failed_desc_new": "Si è verificato un errore imprevisto e non è stato possibile segnalare il problema.",
+    "CL_DV_RF_sf_remaining": "Attualmente in modalità super-congelamento con **minuti rimanenti."
 }
