--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "спарени корисници",
     "CL_CF_CS_atw_cs_2": "Притиснете го копчето Мени за да влезете во списокот со мени.",
     "CL_CF_CS_atw_cs_3": "Изберете WIFI, а потоа притиснете го средното копче за да ја започнете конфигурацијата на WIFI. Симболот WLAN сега ќе почне да трепка.",
-    "CL_CF_CM_sun_rain_atw_name": "Топлинска пумпа ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Топлинска пумпа ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Додадете дополнително време за да ја одржувате храната топла.",
+    "CL_DV_OV_continue_fast_cool_desc": "Оладете ја рерната што е можно побрзо.",
+    "CL_DV_OV_continue_reduces_desc": "Ја намалува преостанатата влага по готвењето.",
+    "CL_DV_OV_go_to_extra": "Одете на дополнителни",
+    "CL_SL_CM_visualization": "Визуелизација",
+    "CL_SL_CM_laundry_usage_report": "Извештај за употреба на алишта",
+    "CL_SL_CM_usage_month": "Користење на месецот",
+    "CL_SL_CM_about_usage_month": "За користењето на месецот",
+    "CL_SL_CM_about_usage_month_detail": "Прикажаните податоци се проценки, а не точни мерења. Нашите проценки се засноваат на контролирани тестови, така што вашите вистински резултати може да се разликуваат. Употребата на енергија во реалниот свет зависи од вашата специфична околина и навики.",
+    "CL_SL_CM_drum_cleaning_title": "Чистење на барабанот",
+    "CL_SL_CM_drum_cleaning_great_job": "Тапанот за миење е чист и завршивте одлична работа!",
+    "CL_SL_CM_drum_cleaning_warning": "Многупати е перен од последното чистење на барабанот и се препорачува да се користи за да се направи средство за чистење алишта.",
+    "CL_SL_CM_drum_cleaning_about": "За чистење на барабанот",
+    "CL_SL_CM_drum_cleaning_about_detail": "Функцијата за чистење на барабанот на машината за перење е циклус на самочистење дизајниран за отстранување на мувла или други бактерии кои најверојатно се насобрале во барабанот преку општа употреба. Ви препорачуваме да го чистите барабанот по 30 циклуси на перење.",
+    "CL_SL_CM_data_statistics": "Статистика на податоци",
+    "CL_SL_CM_data_statistics_about": "За статистиката на податоци",
+    "CL_SL_CM_data_statistics_about_detail": "„Други“ е збир на помалку користени.",
+    "CL_SL_CM_usage_week_about": "За користењето на неделата",
+    "CL_SL_CM_usage_month_about": "За користењето на месецот",
+    "CL_SL_CM_usage_year_about": "За користењето на годината",
+    "CL_SL_CM_washing_temperature": "Температура на перење",
+    "CL_SL_CM_washing_temperature_detail": "Пониските температури се статистички енергетски поефикасни, па можеби ќе сакате да пробате пониска температура на водата следниот пат.",
+    "add_appliance_connect_wifi_atos": "Поврзете се на мрежата „ConnectLife“ во поставките за Wi-Fi на вашиот паметен телефон.\n\nИзлезете од апликацијата ConnectLife и одете до поставките за Wi-Fi на паметниот телефон. Поврзете се на мрежата „ConnectLife“, внесете ја лозинката „ConnectLife“ и вратете се во апликацијата.",
+    "after_sale_report_failed_desc_new": "Настана неочекувана грешка и проблемот не може да се пријави.",
+    "CL_DV_RF_sf_remaining": "Моментално е во супер замрзнување со преостанати ** мин."
 }
