--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "парные пользователи",
     "CL_CF_CS_atw_cs_2": "Нажмите кнопку «Меню», чтобы войти в список меню.",
     "CL_CF_CS_atw_cs_3": "Выберите WIFI, затем нажмите среднюю кнопку, чтобы начать настройку WIFI. Символ WLAN теперь начнет мигать.",
-    "CL_CF_CM_sun_rain_atw_name": "Тепловой насос ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Тепловой насос ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Уделите больше времени сохранению пищи теплой.",
+    "CL_DV_OV_continue_fast_cool_desc": "Охладите духовку как можно быстрее.",
+    "CL_DV_OV_continue_reduces_desc": "Уменьшает остаточную влажность после приготовления.",
+    "CL_DV_OV_go_to_extra": "Перейти к дополнительным материалам",
+    "CL_SL_CM_visualization": "Визуализация",
+    "CL_SL_CM_laundry_usage_report": "Отчет об использовании прачечной",
+    "CL_SL_CM_usage_month": "Использование месяца",
+    "CL_SL_CM_about_usage_month": "Об использовании месяца",
+    "CL_SL_CM_about_usage_month_detail": "Приведенные данные являются оценочными, а не точными измерениями. Наши оценки основаны на контролируемых испытаниях, поэтому ваши фактические результаты могут отличаться. Реальное потребление энергии зависит от вашей конкретной среды и привычек.",
+    "CL_SL_CM_drum_cleaning_title": "Очистка барабана",
+    "CL_SL_CM_drum_cleaning_great_job": "Барабан стиральной машины чистый, вы отлично справились!",
+    "CL_SL_CM_drum_cleaning_warning": "Его стирали много раз с момента последней чистки барабана, и его рекомендуется использовать для придания чистоты белью.",
+    "CL_SL_CM_drum_cleaning_about": "О чистке барабана",
+    "CL_SL_CM_drum_cleaning_about_detail": "Функция очистки барабана стиральной машины — это цикл самоочистки, предназначенный для удаления плесени и других бактерий, которые могут скапливаться внутри барабана в процессе обычного использования. Мы рекомендуем выполнять очистку барабана после 30 циклов стирки.",
+    "CL_SL_CM_data_statistics": "Статистика данных",
+    "CL_SL_CM_data_statistics_about": "О статистике данных",
+    "CL_SL_CM_data_statistics_about_detail": "«Другие» — это сумма менее используемых.",
+    "CL_SL_CM_usage_week_about": "О применении недели",
+    "CL_SL_CM_usage_month_about": "Об использовании месяца",
+    "CL_SL_CM_usage_year_about": "Об использовании года",
+    "CL_SL_CM_washing_temperature": "Температура стирки",
+    "CL_SL_CM_washing_temperature_detail": "По статистике, более низкие температуры более энергоэффективны, поэтому в следующий раз вы можете попробовать использовать более низкую температуру воды.",
+    "add_appliance_connect_wifi_atos": "Подключитесь к сети ConnectLife в настройках Wi-Fi вашего смартфона. Выйдите из приложения ConnectLife и перейдите к настройкам Wi-Fi вашего смартфона. Подключитесь к сети ConnectLife, введите пароль ConnectLife и вернитесь в приложение.",
+    "after_sale_report_failed_desc_new": "Произошла непредвиденная ошибка, и сообщить о проблеме не удалось.",
+    "CL_DV_RF_sf_remaining": "В настоящее время выполняется суперзаморозка, осталось ** мин."
 }
