--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "сполучених користувачів",
     "CL_CF_CS_atw_cs_2": "Натисніть кнопку «Меню», щоб увійти до списку меню.",
     "CL_CF_CS_atw_cs_3": "Виберіть WIFI, потім натисніть середню кнопку, щоб почати налаштування WIFI. Символ WLAN почне блимати.",
-    "CL_CF_CM_sun_rain_atw_name": "Тепловий насос ATW"
+    "CL_CF_CM_sun_rain_atw_name": "Тепловий насос ATW",
+    "CL_DV_OV_continue_keep_warm_desc": "Додайте додатковий час, щоб ваша їжа була теплою.",
+    "CL_DV_OV_continue_fast_cool_desc": "Охолодіть духовку якомога швидше.",
+    "CL_DV_OV_continue_reduces_desc": "Зменшує залишки вологи після варіння.",
+    "CL_DV_OV_go_to_extra": "Перейти до додаткових",
+    "CL_SL_CM_visualization": "Візуалізація",
+    "CL_SL_CM_laundry_usage_report": "Звіт про використання пральні",
+    "CL_SL_CM_usage_month": "Використання місяця",
+    "CL_SL_CM_about_usage_month": "Про використання місяця",
+    "CL_SL_CM_about_usage_month_detail": "Показані дані є приблизними, а не точними вимірюваннями. Наші оцінки базуються на контрольованих тестах, тому ваші фактичні результати можуть відрізнятися. Реальне споживання енергії залежить від вашого конкретного середовища та звичок.",
+    "CL_SL_CM_drum_cleaning_title": "Очищення барабана",
+    "CL_SL_CM_drum_cleaning_great_job": "Барабан пральної машини чистий, і ви зробили чудову роботу!",
+    "CL_SL_CM_drum_cleaning_warning": "Його багато разів прали з моменту останнього чищення барабана, тому його рекомендується використовувати для очищення білизни.",
+    "CL_SL_CM_drum_cleaning_about": "Про очищення барабана",
+    "CL_SL_CM_drum_cleaning_about_detail": "Функція очищення барабана пральної машини – це цикл самоочищення, призначений для видалення цвілі чи інших бактерій, які, імовірно, накопичилися всередині барабана під час звичайного використання. Ми рекомендуємо виконувати очищення барабана після 30 циклів прання.",
+    "CL_SL_CM_data_statistics": "Статистика даних",
+    "CL_SL_CM_data_statistics_about": "Про статистику даних",
+    "CL_SL_CM_data_statistics_about_detail": "«Інші» — це сума менш використовуваних.",
+    "CL_SL_CM_usage_week_about": "Про використання тижня",
+    "CL_SL_CM_usage_month_about": "Про використання місяця",
+    "CL_SL_CM_usage_year_about": "Про використання року",
+    "CL_SL_CM_washing_temperature": "Температура прання",
+    "CL_SL_CM_washing_temperature_detail": "Нижчі температури є статистично більш енергоефективними, тому ви можете спробувати нижчу температуру води наступного разу.",
+    "add_appliance_connect_wifi_atos": "Підключіться до мережі «ConnectLife» у налаштуваннях Wi-Fi свого смартфона.\n\nВийдіть із програми ConnectLife і перейдіть до налаштувань Wi-Fi свого смартфона. Підключіться до мережі «ConnectLife», введіть пароль «ConnectLife» і поверніться до програми.",
+    "after_sale_report_failed_desc_new": "Сталася неочікувана помилка, про яку не вдалося повідомити.",
+    "CL_DV_RF_sf_remaining": "Зараз у режимі суперзаморожування, залишилося ** хв."
 }
