--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4387,5 +4387,30 @@
     "CL_CF_CM_Paired_users": "配对用户",
     "CL_CF_CS_atw_cs_2": "按菜单按钮进入菜单列表。",
     "CL_CF_CS_atw_cs_3": "选择 WIFI，然后按中间按钮开始 WIFI 配置。WLAN 符号现在将开始闪烁。",
-    "CL_CF_CM_sun_rain_atw_name": "ATW 热泵"
+    "CL_CF_CM_sun_rain_atw_name": "ATW 热泵",
+    "CL_DV_OV_continue_keep_warm_desc": "增加时间来保持食物温暖。",
+    "CL_DV_OV_continue_fast_cool_desc": "尽快让烤箱冷却。",
+    "CL_DV_OV_continue_reduces_desc": "减少烹饪后残留的水分。",
+    "CL_DV_OV_go_to_extra": "前往额外内容",
+    "CL_SL_CM_visualization": "可视化",
+    "CL_SL_CM_laundry_usage_report": "洗衣使用报告",
+    "CL_SL_CM_usage_month": "本月使用情况",
+    "CL_SL_CM_about_usage_month": "关于当月使用情况",
+    "CL_SL_CM_about_usage_month_detail": "显示的数据是估计值，而不是精确测量值。我们的估计值基于受控测试，因此您的实际结果可能会有所不同。实际的能源使用情况取决于您的特定环境和习惯。",
+    "CL_SL_CM_drum_cleaning_title": "滚筒清洁",
+    "CL_SL_CM_drum_cleaning_great_job": "洗衣机滚筒很干净，你做得很好！",
+    "CL_SL_CM_drum_cleaning_warning": "自上次滚筒清洗以来已洗过多次，建议使用，可以使衣物更干净。",
+    "CL_SL_CM_drum_cleaning_about": "关于鼓清洁",
+    "CL_SL_CM_drum_cleaning_about_detail": "洗衣机滚筒清洁功能是一种自清洁循环，旨在去除在日常使用过程中可能在滚筒内积聚的霉菌或其他细菌。我们建议您在 30 次洗衣循环后进行一次滚筒清洁。",
+    "CL_SL_CM_data_statistics": "数据统计",
+    "CL_SL_CM_data_statistics_about": "关于数据统计",
+    "CL_SL_CM_data_statistics_about_detail": "“其他”是较少使用的部分的总和。",
+    "CL_SL_CM_usage_week_about": "关于本周的使用情况",
+    "CL_SL_CM_usage_month_about": "关于当月使用情况",
+    "CL_SL_CM_usage_year_about": "关于年度使用情况",
+    "CL_SL_CM_washing_temperature": "洗涤温度",
+    "CL_SL_CM_washing_temperature_detail": "从统计数据来看，较低的温度更节能，因此下次您可能想尝试较低的水温。",
+    "add_appliance_connect_wifi_atos": "在智能手机的 Wi-Fi 设置中连接到“ConnectLife”网络。 \n\n退出 ConnectLife 应用程序，转到智能手机的 WiFi 设置。连接到“ConnectLife”网络并输入密码“ConnectLife”，然后返回 ConnectLife 应用程序。",
+    "after_sale_report_failed_desc_new": "发生了意外错误，无法报告该问题。",
+    "CL_DV_RF_sf_remaining": "目前处于超级冻结状态，剩余 ** 分钟。"
 }
