--- a/language/i18n_ja.json
+++ b/language/i18n_ja.json
@@ -4381,11 +4381,36 @@
     "CL_DV_RF_reminders": "リマインダー",
     "CL_DV_RF_x_hour_before_the_plan": "予定の**時間前",
     "CL_DV_RF_delete_this_reminder": "このリマインダーを削除する",
-    "CL_DV_RF_ai_energy_saving_desc": "冷蔵庫の運転状態を最適化して省エネ効果を実現します。AI省エネは冷蔵庫のエネルギー消費を節約できますが、冷却速度も低下します。",
+    "CL_DV_RF_ai_energy_saving_desc": "冷蔵庫の運転状態を最適化して、省エネ効果が期待できます。AI省エネ機能は冷蔵庫のエネルギー消費を削減できますが、冷却速度も低下します。",
     "CL_DV_RF_self_adaption_desc": "使用習慣に応じて冷蔵室の温度が自動的に調整されるため、温度がより安定し、保存効果が向上します。",
     "CL_DV_RF_hi_nano_desc": "冷蔵庫のイオン除菌・脱臭機能をオン/オフできます。",
     "CL_CF_CM_Paired_users": "ペアユーザー",
     "CL_CF_CS_atw_cs_2": "メニューボタンを押してメニューリストに入ります。",
     "CL_CF_CS_atw_cs_3": "WIFI を選択し、中央のボタンを押して WIFI 設定を開始します。WLAN シンボルが点滅し始めます。",
-    "CL_CF_CM_sun_rain_atw_name": "ATWヒートポンプ"
+    "CL_CF_CM_sun_rain_atw_name": "ATWヒートポンプ",
+    "CL_DV_OV_continue_keep_warm_desc": "食べ物を温かい状態に保つために、さらに時間を追加してください。",
+    "CL_DV_OV_continue_fast_cool_desc": "できるだけ早くオーブンを冷ましてください。",
+    "CL_DV_OV_continue_reduces_desc": "調理後に残る水分を減らします。",
+    "CL_DV_OV_go_to_extra": "エクストラへ進む",
+    "CL_SL_CM_visualization": "視覚化",
+    "CL_SL_CM_laundry_usage_report": "ランドリー使用レポート",
+    "CL_SL_CM_usage_month": "今月の使用状況",
+    "CL_SL_CM_about_usage_month": "月間使用量について",
+    "CL_SL_CM_about_usage_month_detail": "表示されるデータは推定値であり、正確な測定値ではありません。推定値は管理されたテストに基づいているため、実際の結果は異なる場合があります。実際のエネルギー使用量は、特定の環境と習慣によって異なります。",
+    "CL_SL_CM_drum_cleaning_title": "ドラム洗浄",
+    "CL_SL_CM_drum_cleaning_great_job": "洗濯機のドラムはきれいになりました。素晴らしい仕事ですね!",
+    "CL_SL_CM_drum_cleaning_warning": "前回のドラム洗浄から何度も洗浄されており、洗濯物をより清潔にするために使用することをお勧めします。",
+    "CL_SL_CM_drum_cleaning_about": "ドラム洗浄について",
+    "CL_SL_CM_drum_cleaning_about_detail": "洗濯機のドラム洗浄機能は、通常の使用でドラム内に蓄積した可能性のあるカビやその他の細菌を除去するように設計されたセルフクリーニングサイクルです。洗濯サイクルを 30 回実行した後、ドラム洗浄を行うことをお勧めします。",
+    "CL_SL_CM_data_statistics": "データ統計",
+    "CL_SL_CM_data_statistics_about": "データ統計について",
+    "CL_SL_CM_data_statistics_about_detail": "「その他」は、あまり使用されないものの合計です。",
+    "CL_SL_CM_usage_week_about": "今週の使用状況について",
+    "CL_SL_CM_usage_month_about": "月間使用量について",
+    "CL_SL_CM_usage_year_about": "年間の利用について",
+    "CL_SL_CM_washing_temperature": "洗浄温度",
+    "CL_SL_CM_washing_temperature_detail": "統計的には水温が低い方がエネルギー効率が良いので、次回は水温を低くしてみるといいでしょう。",
+    "add_appliance_connect_wifi_atos": "スマートフォンの Wi-Fi 設定で「ConnectLife」ネットワークに接続します。\n\nConnectLife アプリを終了し、スマートフォンの Wi-Fi 設定に移動します。 「ConnectLife」ネットワークに接続し、パスワード「ConnectLife」を入力して、アプリに戻ります。",
+    "after_sale_report_failed_desc_new": "予期しないエラーが発生したため、問題を報告できませんでした。",
+    "CL_DV_RF_sf_remaining": "現在スーパーフリーズ中、残り**分です。"
 }
